--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,13 @@
-annotated-types==0.7.0
-anyio==4.11.0
-asgiref==3.9.2
-bidict==0.23.1
-blinker==1.9.0
-brotli==1.2.0
-cachetools==6.2.1
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
-ConfigArgParse==1.7.1
-cryptography==46.0.2
-deprecation==2.1.0
-distro==1.9.0
-dj-database-url==3.0.1
 Django==5.2.6
-et_xmlfile==2.0.0
-Flask==3.1.2
-flask-cors==6.0.1
-Flask-Login==0.6.3
-gevent==25.9.1
-geventhttpclient==2.3.5
-google-ai-generativelanguage==0.6.15
-google-api-core==2.28.1
-google-api-python-client==2.187.0
-google-auth==2.43.0
-google-auth-httplib2==0.2.1
-google-generativeai==0.8.5
-googleapis-common-protos==1.72.0
-greenlet==3.2.4
-grpcio==1.76.0
-grpcio-status==1.71.2
-h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-httpcore==1.0.9
-httplib2==0.31.0
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.11
-iniconfig==2.3.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.11.1
-locust==2.42.2
-locust-cloud==1.28.1
-MarkupSafe==3.0.3
-msgpack==1.1.2
-multidict==6.7.0
-openai==2.7.1
-openpyxl==3.1.5
-packaging==25.0
-pillow==11.3.0
-platformdirs==4.5.0
-pluggy==1.6.0
-postgrest==2.23.3
-propcache==0.4.1
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.1.3
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.0
-pydantic_core==2.41.1
-Pygments==2.19.2
-PyJWT==2.10.1
-pyparsing==3.2.5
-pytest==8.4.2
-python-dotenv==1.1.1
-python-engineio==4.12.3
-python-socketio==5.14.3
-pyzmq==27.1.0
-qrcode==8.2
-realtime==2.23.3
-requests==2.32.4
-rsa==4.9.1
-setuptools==80.9.0
-simple-websocket==1.1.0
-sniffio==1.3.1
-sqlparse==0.5.3
-storage3==2.23.3
-StrEnum==0.4.15
-supabase==2.23.3
-supabase-auth==2.23.3
-supabase-functions==2.23.3
-tqdm==4.67.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-uritemplate==4.2.0
-urllib3==2.5.0
-websocket-client==1.9.0
-websockets==15.0.1
-Werkzeug==3.1.3
+gunicorn==23.0.0
 whitenoise==6.11.0
-wsproto==1.2.0
-yarl==1.22.0
-zope.event==6.0
-zope.interface==8.0.1
-gunicorn
+
+dj-database-url==3.0.1
+psycopg2-binary==2.9.10
+
+python-dotenv==1.1.1
+pillow==11.3.0
+qrcode==8.2
+openpyxl==3.1.5
+requests==2.32.4
+supabase==2.23.3
